# ToolCollection

./: .gitignore
MipmapGen/: CMakeLists.txt  CMakeSettings.json  TiledTexture.cpp  TiledTexture.h  config.ini  launch.vs.json  main.cpp  utility.h
